# cpp-lab-7-8

./: CMakeLists.txt  README.md  main.cpp
database/: README.md
model/: BankAccount.h  CheckingAccount.cpp  CheckingAccount.h  Customer.cpp  Customer.h  SavingsAccount.cpp  SavingsAccount.h  Transaction.h
storage/: AccountsManager.cpp  AccountsManager.h  DatabaseConnection.h  FileDatabaseConnection.cpp  FileDatabaseConnection.h
util/: LinkedList.h
